--- a/index.html
+++ b/index.html
@@ -4,74 +4,95 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Custom styles -->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header section -->
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
+    <header class="page-header">
+      <nav class="header-nav">
+        <a class="logo link" href="./index.html">
+          <span class="logo-part-first">Web</span
+          ><span class="logo-part-two-header">Studio</span></a
+        >
 
-        <ul>
-          <li>
-            <a href="">Studio</a>
+        <!-- Header section - Navigation -->
+        <ul class="header-list list">
+          <li class="header-item">
+            <a class="header-link link" href="./index.html">Studio</a>
           </li>
-          <li>
-            <a href="">Portfolio</a>
+          <li class="header-item">
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li>
-            <a href="">Contacts</a>
+          <li class="header-item">
+            <a class="header-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
 
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <!-- Header section - Contacts -->
+      <address class="header-contact">
+        <ul class="header-contact-list list">
+          <li class="header-contact-item">
+            <a class="header-contact-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="header-contact-item">
+            <a class="header-contact-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
 
-    <main>
+    <!-- Main section -->
+    <main class="page-main">
       <!-- Hero section -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="btn btn-dark" type="button">Order Service</button>
       </section>
 
-      <!-- Servises section 1 -->
-      <section>
-        <h2>Feature</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <!-- Features section 1 -->
+      <section class="features">
+        <h2 class="features-title">Feature</h2>
+        <ul class="features-list list">
+          <li class="features-item">
+            <h3 class="header-3">Strategy</h3>
+            <p class="features-item-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="header-3">Punctuality</h3>
+            <p class="body-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="header-3">Diligence</h3>
+            <p class="body-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="header-3">Technologies</h3>
+            <p class="body-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -80,10 +101,10 @@
       </section>
 
       <!-- About section 2 -->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+      <section class="page-about">
+        <h2 class="header-2">What are we doing</h2>
+        <ul class="about-list list">
+          <li class="about-item">
             <img
               src="./images/img21.jpg"
               alt="identify the business problem "
@@ -91,7 +112,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="about-item">
             <img
               src="./images/img22.jpg"
               alt="problem-solving"
@@ -99,7 +120,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="about-item">
             <img
               src="./images/img23.jpg"
               alt="key message to the audience"
@@ -111,57 +132,61 @@
       </section>
 
       <!-- Team section 3 -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="page-team">
+        <h2 class="header-2">Our Team</h2>
+        <ul class="team-list list">
+          <li class="cards-item">
             <img
               src="./images/img31.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="header-3">Mark Guerrero</h3>
+            <p class="body-text">Product Designer</p>
           </li>
-          <li>
+          <li class="cards-item">
             <img
               src="./images/img32.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="header-3">Tom Ford</h3>
+            <p class="body-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="cards-item">
             <img
               src="./images/img33.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="header-3">Camila Garcia</h3>
+            <p class="body-text">Marketing</p>
           </li>
-          <li>
+          <li class="cards-item">
             <img
               src="./images/img34.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="header-3">Daniel Wilson</h3>
+            <p class="body-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!-- Footer section -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo link" href="./index.html">
+        <span class="logo-part-first">Web</span
+        ><span class="logo-part-two-footer">Studio</span>
+      </a>
+
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
