--- a/portfolio.html
+++ b/portfolio.html
@@ -83,47 +83,47 @@
         <!-- Cards -->
         <ul class="cards-list list">
           <li class="cards-item">
-            <img src="./images/portfolio/img-portfolio-1.jpg" alt="" />
+            <img src="./images/img-portfolio-1.jpg" alt="" />
             <h2 class="header-3">Banking App Interface Concept</h2>
             <p class="body-text">App</p>
           </li>
           <li class="cards-item">
-            <img src="./images/portfolio/img-portfolio-2.jpg" alt="" />
+            <img src="./images/img-portfolio-2.jpg" alt="" />
             <h2 class="header-3">Cashless Payment</h2>
             <p class="body-text">Marketing</p>
           </li>
           <li>
-            <img src="./images/portfolio/img-portfolio-3.jpg" alt="" />
+            <img src="./images/img-portfolio-3.jpg" alt="" />
             <h2 class="header-3">Meditation App</h2>
             <p class="body-text">App</p>
           </li>
           <li>
-            <img src="./images/portfolio/img-portfolio-4.jpg" alt="" />
+            <img src="./images/img-portfolio-4.jpg" alt="" />
             <h2 class="header-3">Taxi Service</h2>
             <p class="body-text">Marketing</p>
           </li>
           <li>
-            <img src="./images/portfolio/img-portfolio-5.jpg" alt="" />
+            <img src="./images/img-portfolio-5.jpg" alt="" />
             <h2 class="header-3">Screen Illustrations</h2>
             <p class="body-text">Design</p>
           </li>
           <li>
-            <img src="./images/portfolio/img-portfolio-6.jpg" alt="" />
+            <img src="./images/img-portfolio-6.jpg" alt="" />
             <h2 class="header-3">Online Courses</h2>
             <p class="body-text">Marketing</p>
           </li>
           <li>
-            <img src="./images/portfolio/img-portfolio-7.jpg" alt="" />
+            <img src="./images/img-portfolio-7.jpg" alt="" />
             <h2 class="header-3">Instagram Stories Concept</h2>
             <p class="body-text">Design</p>
           </li>
           <li>
-            <img src="./images/portfolio/img-portfolio-8.jpg" alt="" />
+            <img src="./images/img-portfolio-8.jpg" alt="" />
             <h2 class="header-3">Organic Food</h2>
             <p class="body-text">Web Site</p>
           </li>
           <li>
-            <img src="./images/portfolio/img-portfolio-9.jpg" alt="" />
+            <img src="./images/img-portfolio-9.jpg" alt="" />
             <h2 class="header-3">Fresh Coffee</h2>
             <p class="body-text">Web Site</p>
           </li>
