--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,800&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
 
@@ -22,8 +22,7 @@
     <header class="page-header">
       <nav class="header-nav">
         <a class="logo link" href="./index.html">
-          <span class="logo-part-first">Web</span
-          ><span class="logo-part-two-header">Studio</span></a
+          Web<span class="logo-header">Studio</span></a
         >
 
         <!-- Header section - Navigation -->
@@ -44,12 +43,14 @@
       <address class="header-contact">
         <ul class="header-contact-list list">
           <li class="header-contact-item">
-            <a class="header-contact-link link" href="mailto:info@devstudio.com"
+            <a
+              class="header-contact-link link adress"
+              href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact-item">
-            <a class="header-contact-link link" href="tel:+110001111111"
+            <a class="header-contact-link link adress" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -60,7 +61,7 @@
     <!-- Main section -->
     <main>
       <section class="page-portfolio">
-        <h1 class="portfolio-title">Filters</h1>
+        <h1 class="portfolio-title" hidden>Filters</h1>
 
         <!-- Filters -->
         <ul class="portfolio-lisl list">
@@ -83,48 +84,93 @@
         <!-- Cards -->
         <ul class="cards-list list">
           <li class="cards-item">
-            <img src="./images/img-portfolio-1.jpg" alt="" />
-            <h2 class="header-3">Banking App Interface Concept</h2>
+            <img
+              src="./images/img-portfolio-1.jpg"
+              alt="Banking App Interface Concept"
+              width="360"
+              height="300"
+            />
+            <h2 class="header-three">Banking App Interface Concept</h2>
             <p class="body-text">App</p>
           </li>
           <li class="cards-item">
-            <img src="./images/img-portfolio-2.jpg" alt="" />
-            <h2 class="header-3">Cashless Payment</h2>
+            <img
+              src="./images/img-portfolio-2.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h2 class="header-three">Cashless Payment</h2>
             <p class="body-text">Marketing</p>
           </li>
           <li>
-            <img src="./images/img-portfolio-3.jpg" alt="" />
-            <h2 class="header-3">Meditation App</h2>
+            <img
+              src="./images/img-portfolio-3.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <h2 class="header-three">Meditation App</h2>
             <p class="body-text">App</p>
           </li>
           <li>
-            <img src="./images/img-portfolio-4.jpg" alt="" />
-            <h2 class="header-3">Taxi Service</h2>
+            <img
+              src="./images/img-portfolio-4.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+            <h2 class="header-three">Taxi Service</h2>
             <p class="body-text">Marketing</p>
           </li>
           <li>
-            <img src="./images/img-portfolio-5.jpg" alt="" />
-            <h2 class="header-3">Screen Illustrations</h2>
+            <img
+              src="./images/img-portfolio-5.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <h2 class="header-three">Screen Illustrations</h2>
             <p class="body-text">Design</p>
           </li>
           <li>
-            <img src="./images/img-portfolio-6.jpg" alt="" />
-            <h2 class="header-3">Online Courses</h2>
+            <img
+              src="./images/img-portfolio-6.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h2 class="header-three">Online Courses</h2>
             <p class="body-text">Marketing</p>
           </li>
           <li>
-            <img src="./images/img-portfolio-7.jpg" alt="" />
-            <h2 class="header-3">Instagram Stories Concept</h2>
+            <img
+              src="./images/img-portfolio-7.jpg"
+              alt="Instagram Stories Concept"
+              width="360"
+              height="300"
+            />
+            <h2 class="header-three">Instagram Stories Concept</h2>
             <p class="body-text">Design</p>
           </li>
           <li>
-            <img src="./images/img-portfolio-8.jpg" alt="" />
-            <h2 class="header-3">Organic Food</h2>
+            <img
+              src="./images/img-portfolio-8.jpg"
+              alt="Organic Food"
+              width="360"
+              height="300"
+            />
+            <h2 class="header-three">Organic Food</h2>
             <p class="body-text">Web Site</p>
           </li>
           <li>
-            <img src="./images/img-portfolio-9.jpg" alt="" />
-            <h2 class="header-3">Fresh Coffee</h2>
+            <img
+              src="./images/img-portfolio-9.jpg"
+              alt="Fresh Coffee"
+              width="360"
+              height="300"
+            />
+            <h2 class="header-three">Fresh Coffee</h2>
             <p class="body-text">Web Site</p>
           </li>
         </ul>
@@ -132,9 +178,8 @@
     </main>
     <!-- Footer section -->
     <footer class="footer">
-      <a class="logo link" href="./index.html">
-        <span class="logo-part-first">Web</span
-        ><span class="logo-part-two-footer">Studio</span>
+      <a class="logo link" href="./index.html"
+        >Web<span class="logo-footer">Studio</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
