--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,800&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
 
@@ -22,8 +22,7 @@
     <header class="page-header">
       <nav class="header-nav">
         <a class="logo link" href="./index.html">
-          <span class="logo-part-first">Web</span
-          ><span class="logo-part-two-header">Studio</span></a
+          Web<span class="logo-header">Studio</span></a
         >
 
         <!-- Header section - Navigation -->
@@ -44,12 +43,14 @@
       <address class="header-contact">
         <ul class="header-contact-list list">
           <li class="header-contact-item">
-            <a class="header-contact-link link" href="mailto:info@devstudio.com"
+            <a
+              class="header-contact-link link adress"
+              href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact-item">
-            <a class="header-contact-link link" href="tel:+110001111111"
+            <a class="header-contact-link link adress" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -67,31 +68,31 @@
 
       <!-- Features section 1 -->
       <section class="features">
-        <h2 class="features-title">Feature</h2>
+        <h2 class="features-title" hidden>Feature</h2>
         <ul class="features-list list">
           <li class="features-item">
-            <h3 class="header-3">Strategy</h3>
-            <p class="features-item-text">
+            <h3 class="features-item- title header-three">Strategy</h3>
+            <p class="body-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="features-item">
-            <h3 class="header-3">Punctuality</h3>
+            <h3 class="features-item-title header-three">Punctuality</h3>
             <p class="body-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="features-item">
-            <h3 class="header-3">Diligence</h3>
+            <h3 class="features-item-title header-three">Diligence</h3>
             <p class="body-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="features-item">
-            <h3 class="header-3">Technologies</h3>
+            <h3 class="features-item-title header-three">Technologies</h3>
             <p class="body-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -102,7 +103,7 @@
 
       <!-- About section 2 -->
       <section class="page-about">
-        <h2 class="header-2">What are we doing</h2>
+        <h2 class="about-title header-two">What are we doing</h2>
         <ul class="about-list list">
           <li class="about-item">
             <img
@@ -133,7 +134,7 @@
 
       <!-- Team section 3 -->
       <section class="page-team">
-        <h2 class="header-2">Our Team</h2>
+        <h2 class="team-title header-two">Our Team</h2>
         <ul class="team-list list">
           <li class="cards-item">
             <img
@@ -142,7 +143,7 @@
               width="264"
               height="260"
             />
-            <h3 class="header-3">Mark Guerrero</h3>
+            <h3 class="header-three">Mark Guerrero</h3>
             <p class="body-text">Product Designer</p>
           </li>
           <li class="cards-item">
@@ -152,7 +153,7 @@
               width="264"
               height="260"
             />
-            <h3 class="header-3">Tom Ford</h3>
+            <h3 class="header-three">Tom Ford</h3>
             <p class="body-text">Frontend Developer</p>
           </li>
           <li class="cards-item">
@@ -162,7 +163,7 @@
               width="264"
               height="260"
             />
-            <h3 class="header-3">Camila Garcia</h3>
+            <h3 class="header-three">Camila Garcia</h3>
             <p class="body-text">Marketing</p>
           </li>
           <li class="cards-item">
@@ -172,7 +173,7 @@
               width="264"
               height="260"
             />
-            <h3 class="header-3">Daniel Wilson</h3>
+            <h3 class="header-three">Daniel Wilson</h3>
             <p class="body-text">UI Designer</p>
           </li>
         </ul>
@@ -181,11 +182,9 @@
 
     <!-- Footer section -->
     <footer class="footer">
-      <a class="logo link" href="./index.html">
-        <span class="logo-part-first">Web</span
-        ><span class="logo-part-two-footer">Studio</span>
+      <a class="logo link" href="./index.html"
+        >Web<span class="logo-footer">Studio</span>
       </a>
-
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
