--- a/portfolio.html
+++ b/portfolio.html
@@ -84,92 +84,110 @@
         <!-- Cards -->
         <ul class="cards-list list">
           <li class="cards-item">
-            <img
-              src="./images/img-portfolio-1.jpg"
-              alt="Banking App Interface Concept"
-              width="360"
-              height="300"
-            />
+            <a class="cards-item-link link" href="">
+              <img
+                src="./images/img-portfolio-1.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="header-three">Banking App Interface Concept</h2>
             <p class="body-text">App</p>
           </li>
           <li class="cards-item">
-            <img
-              src="./images/img-portfolio-2.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
+            <a class="cards-item-link link" href="">
+              <img
+                src="./images/img-portfolio-2.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="header-three">Cashless Payment</h2>
             <p class="body-text">Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/img-portfolio-3.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
+            <a class="cards-item-link link" href="">
+              <img
+                src="./images/img-portfolio-3.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="header-three">Meditation App</h2>
             <p class="body-text">App</p>
           </li>
           <li>
-            <img
-              src="./images/img-portfolio-4.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
+            <a class="cards-item-link link" href="">
+              <img
+                src="./images/img-portfolio-4.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="header-three">Taxi Service</h2>
             <p class="body-text">Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/img-portfolio-5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
+            <a class="cards-item-link link" href="">
+              <img
+                src="./images/img-portfolio-5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="header-three">Screen Illustrations</h2>
             <p class="body-text">Design</p>
           </li>
           <li>
-            <img
-              src="./images/img-portfolio-6.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
+            <a class="cards-item-link link" href="">
+              <img
+                src="./images/img-portfolio-6.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="header-three">Online Courses</h2>
             <p class="body-text">Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/img-portfolio-7.jpg"
-              alt="Instagram Stories Concept"
-              width="360"
-              height="300"
-            />
+            <a class="cards-item-link link" href="">
+              <img
+                src="./images/img-portfolio-7.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="header-three">Instagram Stories Concept</h2>
             <p class="body-text">Design</p>
           </li>
           <li>
-            <img
-              src="./images/img-portfolio-8.jpg"
-              alt="Organic Food"
-              width="360"
-              height="300"
-            />
+            <a class="cards-item-link link" href="">
+              <img
+                src="./images/img-portfolio-8.jpg"
+                alt="Organic Food"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="header-three">Organic Food</h2>
             <p class="body-text">Web Site</p>
           </li>
           <li>
-            <img
-              src="./images/img-portfolio-9.jpg"
-              alt="Fresh Coffee"
-              width="360"
-              height="300"
-            />
+            <a class="cards-item-link link" href="">
+              <img
+                src="./images/img-portfolio-9.jpg"
+                alt="Fresh Coffee"
+                width="360"
+                height="300"
+              />
+            </a>
             <h2 class="header-three">Fresh Coffee</h2>
             <p class="body-text">Web Site</p>
           </li>
