--- a/index.html
+++ b/index.html
@@ -43,14 +43,12 @@
       <address class="header-contact">
         <ul class="header-contact-list list">
           <li class="header-contact-item">
-            <a
-              class="header-contact-link link adress"
-              href="mailto:info@devstudio.com"
+            <a class="header-contact-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact-item">
-            <a class="header-contact-link link adress" href="tel:+110001111111"
+            <a class="header-contact-link link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -71,28 +69,28 @@
         <h2 class="features-title" hidden>Feature</h2>
         <ul class="features-list list">
           <li class="features-item">
-            <h3 class="features-item- title header-three">Strategy</h3>
+            <h3 class="header-three">Strategy</h3>
             <p class="body-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="features-item">
-            <h3 class="features-item-title header-three">Punctuality</h3>
+            <h3 class="header-three">Punctuality</h3>
             <p class="body-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="features-item">
-            <h3 class="features-item-title header-three">Diligence</h3>
+            <h3 class="header-three">Diligence</h3>
             <p class="body-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="features-item">
-            <h3 class="features-item-title header-three">Technologies</h3>
+            <h3 class="header-three">Technologies</h3>
             <p class="body-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
