--- a/portfolio.html
+++ b/portfolio.html
@@ -43,14 +43,12 @@
       <address class="header-contact">
         <ul class="header-contact-list list">
           <li class="header-contact-item">
-            <a
-              class="header-contact-link link adress"
-              href="mailto:info@devstudio.com"
+            <a class="header-contact-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact-item">
-            <a class="header-contact-link link adress" href="tel:+110001111111"
+            <a class="header-contact-link link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -91,9 +89,9 @@
                 width="360"
                 height="300"
               />
+              <h2 class="cards-item-title">Banking App Interface Concept</h2>
+              <p class="cards-item-text">App</p>
             </a>
-            <h2 class="header-three">Banking App Interface Concept</h2>
-            <p class="body-text">App</p>
           </li>
           <li class="cards-item">
             <a class="cards-item-link link" href="">
@@ -103,9 +101,9 @@
                 width="360"
                 height="300"
               />
+              <h2 class="cards-item-title">Cashless Payment</h2>
+              <p class="cards-item-text">Marketing</p>
             </a>
-            <h2 class="header-three">Cashless Payment</h2>
-            <p class="body-text">Marketing</p>
           </li>
           <li>
             <a class="cards-item-link link" href="">
@@ -115,9 +113,9 @@
                 width="360"
                 height="300"
               />
+              <h2 class="cards-item-title">Meditation App</h2>
+              <p class="cards-item-text">App</p>
             </a>
-            <h2 class="header-three">Meditation App</h2>
-            <p class="body-text">App</p>
           </li>
           <li>
             <a class="cards-item-link link" href="">
@@ -127,9 +125,9 @@
                 width="360"
                 height="300"
               />
+              <h2 class="cards-item-title">Taxi Service</h2>
+              <p class="cards-item-text">Marketing</p>
             </a>
-            <h2 class="header-three">Taxi Service</h2>
-            <p class="body-text">Marketing</p>
           </li>
           <li>
             <a class="cards-item-link link" href="">
@@ -139,9 +137,9 @@
                 width="360"
                 height="300"
               />
+              <h2 class="cards-item-title">Screen Illustrations</h2>
+              <p class="cards-item-text">Design</p>
             </a>
-            <h2 class="header-three">Screen Illustrations</h2>
-            <p class="body-text">Design</p>
           </li>
           <li>
             <a class="cards-item-link link" href="">
@@ -151,9 +149,9 @@
                 width="360"
                 height="300"
               />
+              <h2 class="cards-item-title">Online Courses</h2>
+              <p class="cards-item-text">Marketing</p>
             </a>
-            <h2 class="header-three">Online Courses</h2>
-            <p class="body-text">Marketing</p>
           </li>
           <li>
             <a class="cards-item-link link" href="">
@@ -163,9 +161,9 @@
                 width="360"
                 height="300"
               />
+              <h2 class="cards-item-title">Instagram Stories Concept</h2>
+              <p class="cards-item-text">Design</p>
             </a>
-            <h2 class="header-three">Instagram Stories Concept</h2>
-            <p class="body-text">Design</p>
           </li>
           <li>
             <a class="cards-item-link link" href="">
@@ -175,9 +173,9 @@
                 width="360"
                 height="300"
               />
+              <h2 class="cards-item-title">Organic Food</h2>
+              <p class="cards-item-text">Web Site</p>
             </a>
-            <h2 class="header-three">Organic Food</h2>
-            <p class="body-text">Web Site</p>
           </li>
           <li>
             <a class="cards-item-link link" href="">
@@ -187,9 +185,9 @@
                 width="360"
                 height="300"
               />
+              <h2 class="cards-item-title">Fresh Coffee</h2>
+              <p class="cards-item-text">Web Site</p>
             </a>
-            <h2 class="header-three">Fresh Coffee</h2>
-            <p class="body-text">Web Site</p>
           </li>
         </ul>
       </section>
